# TestFA

./: Dockerfile  README.md  docker-compose.yaml  env.template
backend/: Makefile  debug.yml  env.template  pyproject.toml  run.py
backend/alembic/versions/: 20241030_d151823b1a21_clientv1.py  20241031_3e7fc93b8062_client_v4.py  20241031_5b0477cc837a_clientv4.py  20241031_606d7703135f_clientv5.py  20241031_ad2293cb82d6_clientv2.py  20241031_c37331007cb4_clientv3.py  20241031_d74aba0d1c51_clientv4.py
backend/src/: main.py
backend/src/app/api/: config.ini  logging.py  router.py
backend/src/app/api/v1/: client.py
backend/src/app/models/: client.py  like.py
backend/src/app/repositories/: client.py  exceptions.py  like.py
backend/src/app/schemas/: client.py  like.py  types.py
backend/src/app/services/: client.py  like.py
backend/src/app/utils/: calc_dist.py  geocoding.py  image_processor.py  repository.py  unitofwork.py
backend/src/app_config/: app_settings.py  config_db.py  config_redis.py
backend/src/database/: all_models.py  database.py
backend/src/redisrepo/: dependencies.py
backend/tests/api/: test2.py
backend/tests/integration/: conftest.py
