[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["4got10king <Aldavletshina77654@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.21" }
alembic = "^1.13.3"
pydantic = { extras = ["email"], version = "^2.4.0" }
itsdangerous = "^2.1.2"
transliterate = "^1.10.2"
pyjwt = "^2.8.0"
bcrypt = "^4.1.3"
asyncpg = "^0.30.0"
python-dateutil = "^2.9.0.post0"
alembic-postgresql-enum = "^1.3.0"
cyrtranslit = "^1.1.1"
python-jose = "^3.3.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
python-multipart = "^0.0.16"
loguru = "^0.7.2"
pillow = "^11.0.0"
cachetools = "^5.5.0"
geopy = "^2.4.1"
httpx = "^0.27.2"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
